--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #F6F9FC;
+  background: #EEEEEE;
   min-height: 100%;
 }
