--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,4 +7,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #eeeeee;
   min-height: 100%;
+  color: #424242;
+}
+
+h1,
+h2,
+h3,
+h4,
+span,
+p {
+  line-height: 1.3;
+  font-weight: 300;
 }
